# DocumentLibrary

./: CMakeLists.txt  todo
config/: db.xml  doclibd.conf
extra/: .screenrc  doclib.doxyfile  doclib.doxyfile.in  doclib.screenrc  doclib.vimproject
extra/.svn/: all-wcprops  entries
extra/.svn/text-base/: .vimprojects.svn-base  doclib.doxyfile.svn-base
extra/design/: protocols
extra/design/umbrello/: doclib_design.xmi
src/: doclib_includes.hpp  increment_number.sh  version.hpp
src/.svn/: all-wcprops  entries
src/.svn/text-base/: doclib_includes.hpp.svn-base  version.hpp.svn-base
src/core/: CMakeLists.txt  concurrent_queue.hpp  core_includes.hpp  doclib_conf.cpp  doclib_conf.hpp  doclib_core.cpp  doclib_core.hpp  doclib_exception.hpp  increment_version.cmake  inifile.cpp  inifile.hpp  read_version.cmake  version.cpp
src/core/.svn/: all-wcprops  entries
src/core/.svn/text-base/: core_includes.hpp.svn-base  doclib_conf.cpp.svn-base  doclib_conf.hpp.svn-base  doclib_core.cpp.svn-base  doclib_core.hpp.svn-base
src/daemon/: CMakeLists.txt  connection.cpp  connection.hpp  doclibd.cpp  doclibd.hpp  doclibd_includes.hpp  io_service_pool.cpp  io_service_pool.hpp  main.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  winmain.cpp
src/daemon/.svn/: all-wcprops  entries
src/daemon/.svn/text-base/: doclibd_includes.hpp.svn-base  main.cpp.svn-base
src/daemon/win/: doclibd.aps  doclibd.rc  resource.h
src/libmgr/: .doc_database.cpp.swp  .doc_file_item.cpp.swp  CMakeLists.txt  doc_database.cpp  doc_database.hpp  doc_file_item.cpp  doc_file_item.hpp  libmgr_includes.hpp  todo.txt  vf_predicates.hpp  virtual_folder.cpp  virtual_folder.hpp
src/libmgr/.svn/: all-wcprops  entries
src/libmgr/.svn/text-base/: CMakeLists.txt.svn-base  doc_database.cpp.svn-base  doc_database.hpp.svn-base  doc_file_item.cpp.svn-base  doc_file_item.hpp.svn-base  libmgr_includes.hpp.svn-base  virtual_folder.cpp.svn-base  virtual_folder.hpp.svn-base
src/libmgr/tinyxml/: CMakeLists.txt
src/libmgr/tinyxml/.svn/: entries
src/tinyxml/.svn/: all-wcprops  entries
test/: CMakeLists.txt  libmgr_test.cpp
test/.svn/: all-wcprops  entries
